2014-05-22  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlattribute.c: (gst_ttml_attribute_normalize_length):
	Fix corner case crash for RELATIVE padding without extent attribute.

2014-05-22  Xavi Artigas  <xartigas@fluendo.com>

	* testsuite/ttml-play.bat:
	* testsuite/ttmlrender-play.bat:
	* testsuite/ttmlparse-play.bat:
	Test scripts for ttmlparse and ttmlrender. (on Windows).

2014-05-22  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlrender.c: (gst_ttmlrender_store_layout),
	(gst_ttmlrender_new_region), (gst_ttmlrender_get_property),
	(gst_ttmlrender_set_property), (gst_ttmlrender_class_init):
	* src/gstttmlrender.h:
	* src/gstttmlutils.c: (gst_ttml_text_align_spec_get_type),
	(gst_ttml_display_align_spec_get_type):
	* src/gstttmlutils.h:
	Add a couple of properties to override the default settings for some
	attributes (text_align and display_align), since they seem a bit odd to me...

2014-05-22  Xavi Artigas  <xartigas@fluendo.com>

	* testsuite/ttml-check-ALL.sh:
	* testsuite/ttml-play.sh:
	* testsuite/ttml-record-ALL-GOLD.sh:
	* testsuite/ttml-record.sh:
	* testsuite/ttmlparse-check-ALL.sh:
	* testsuite/ttmlparse-record-ALL-GOLD.sh:
	* testsuite/ttmlparse-record.sh:
	* testsuite/ttmlrender-check-ALL.sh:
	* testsuite/ttmlrender-play.sh:
	* testsuite/ttmlrender-record-ALL-GOLD.sh:
	* testsuite/ttmlrender-record.sh:
	Test scripts for ttmlparse and ttmlrender.

2014-05-21  Xavi Artigas  <xartigas@fluendo.com>

	Whitespace.

2014-05-21  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlrender.c: (gst_ttmlrender_show_layout),
	(gst_ttmlrender_show_regions):
	Fix textAlign when showing layouts line by line (Again).

2014-05-21  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlrender.c: (gst_ttmlrender_show_regions):
	Fix textAlign when showing layouts line by line.

2014-05-21  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlattribute.c: (gst_ttml_attribute_parse_lengths_list),