@@ -1,0 +1,1 @@
+gst-launch-0.10 -v filesrc location=cpcdemo_smptett.xml ! ttmlrender ! ffmpegcolorspace ! video/x-raw-rgb, bpp=(int)32, depth=(int)32, endianness=(int)4321, red_mask=(int)65280, green_mask=(int)16711680, blue_mask=(int)-16777216, alpha_mask=(int)255, width=(int)640, height=(int)360 ! videomixer2 name=m ! ffmpegcolorspace ! d3dvideosink filesrc location=cpcdemo_low.mov ! qtdemux name=d ! queue ! audio/mpeg ! decodebin2 ! autoaudiosink d. ! queue ! ffdec_h264 ! ffmpegcolorspace ! video/x-raw-rgb, bpp=(int)32, depth=(int)32, endianness=(int)4321, red_mask=(int)65280, green_mask=(int)16711680, blue_mask=(int)-16777216, alpha_mask=(int)255, width=(int)640, height=(int)360 ! m.
