@@ -1,0 +1,1 @@
+i:\gstreamer-sdk\1.0\x86\bin\gst-launch-1.0 -v filesrc location=cpcdemo_smptett.xml ! ttmlrender ! videoconvert ! video/x-raw, format=(string)ARGB, width=(int)640, height=(int)360 ! videomixer name=m ! videoconvert ! d3dvideosink filesrc location=cpcdemo_low.mov ! qtdemux name=d ! queue ! audio/mpeg ! decodebin ! autoaudiosink d. ! queue ! avdec_h264 ! videoconvert ! video/x-raw, format=ARGB, width=(int)640, height=(int)360 ! m.
