@@ -1,0 +1,87 @@
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<tt xml:lang="en" xmlns="http://www.w3.org/ns/ttml" xmlns:tts="http://www.w3.org/ns/ttml#styling" xmlns:ttm="http://www.w3.org/ns/ttml#metadata" xmlns:ttp="http://www.w3.org/ns/ttml#parameter" ttp:timeBase="media" ttp:frameRate="30" ttp:frameRateMultiplier="1000 1001" xmlns:smpte="http://www.smpte-ra.org/schemas/2052-1/2010/smpte-tt" xmlns:m608="http://www.smpte-ra.org/schemas/2052-1/2010/smpte-tt#cea608">
+    <head>
+        <metadata>
+            <ttm:desc>SMPTE Timed Text document created by MacCaption™ version 5.5.00</ttm:desc>
+            <ttm:title>CPC Captioning Demo</ttm:title>
+            <smpte:information xmlns:m608="http://www.smpte-ra.org/schemas/2052-1/2010/smpte-tt#cea608" origin="http://www.smpte-ra.org/schemas/2052-1/2010/smpte-tt#cea608" mode="Preserved" m608:channel="CC1" m608:programName="Demo" m608:captionService="F1C1CC"/>
+            <smpte:data encoding="Base64" datatype="http://www.smpte-ra.org/schemas/2052-1/2010/smpte-tt#cea608" begin="00:00:00:00">lCCAgJQggICUL4CAlK6AgJQggICUdoCAkTeAgM3VgIDTSYCAQ4CAgJE3gICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgJQggICUL4CAlK6AgJQggICU0ICASSCAgMHNgIAgwYCAVCCAgFTIgIBFIICATEWAgEZUgICUcICAT0aAgCBUgIDIRYCAINOAgENSgIBFRYCAzq6AgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgJQsgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAlCCAgJQvgICUroCAlCCAgJTQgIDTT4CAIEOAgMHQgIBUSYCAT86AgNOAgICUcICAT0aAgCBXgIDIwYCAVCCAgEkggIDTwYCA2YCAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgJQggICUL4CAlK6AgJQggICU0ICAwdCAgNBFgIDBUoCAIMGAgFQggIBUyICARSCAgExFgIBGVICAlHCAgE9GgIAgVICAyEWAgCDTgIBDUoCARUWAgM4sgIAgVICAT0+AgK6AgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICUIICAlC+AgJSugICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgJQggICUWICAl6KAgM5PgIBXIICASaeAgM0ggIDBVICAIFSAgMhFgICUdoCAUkmAgMfIgIBUIICAT0aAgCBUgIDIRYCAINOAgENSgIBFRYCAziyAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICULICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgJQggICUL4CAlK6AgJQggICUWICAl6KAgNNPgIAgzYCA2SCAgEPBgIDQVICASU+AgM7TgICUdoCAwdCAgNBFgIDBUoCAIMGAgFQggIBUyICARSCAgFJJgIDHyICAVK6AgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgJQggICUL4CAlK6AgICAgICAgICAgICAgICAgICUIICAlPKAgJehgICU8oCAl6GAgJGugIDOT4CAVyCAgEkggIDBzYCAIE+AgEZGgIAg04CAQ1KAgEVFgIDOroCAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgJQsgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAlCCAgJQvgICUroCAlCCAgJRUgICXoYCAlFSAgJehgICRroCAVE+AgCBJgIDOxICASUOAgMFUgIBFgICAlPKAgJehgICU8oCAl6GAgJGugIBUyICAwVSAgCBJgICnzYCAIE+AgEZGgIAg04CAQ1KAgEVFgIDOLICAgICAgICAgICAgICAlCCAgJQvgICUroCAlCCAgJRUgICUVICAlFSAgJGugIBXyICAwVSAgEXWgIBFUoCAIEmAgCDTgIDB2YCAlPSAgJT0gICU9ICAka6AgEnTgIAgSYCAVMGAgExJgIBDSYCA2kWAgMSugICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgJQggICUL4CAlK6AgJQggICRUoCAl6GAgM5PgIBXIICAzdmAgCDOgIDBzYCARSCAgMHQgIDQRYCAwVKAgNMggIDBVICAkXCAgJcjgIBUyICARSCAgMJPgIBUVICAT82AgCBPgIBGIICAVMiAgEUggIDTQ4CAUkWAgEXOgIAsgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgJQsgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAlCCAgJQvgICUroCAlCCAgJFSgICXI4CAV0WAgCDQgIDVVICAIEOAgMHQgIBUSYCAT86AgNMggIBPRoCAkfKAgJehgIBXyICAwVSAgCBJgIAg04CAwdmAgCDBgIBUIICAVMiAgEUggIBUT4CA0CyAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgJQggICUL4CAlK6AgJQggICRUoCAlyOAgNNPgIAgVICAyMGAgFQggIDN2YCAIM6AgMHNgIBFIICASdOAgJHygIDOT4CAVCCAgENPgIDWRYCAUkWAgMQggIDC2YCAIEOAgMHQgIBUSYCAT86AgNOugICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgJQggICUL4CAlK6AgJQggICU9ICAl6GAgNXQgIAg1YCAzlSAgElMgIAgzoCAT1eAgCyAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICUIICAlC+AgJSugICUIICAlFKAgJcjgIBXRYCAIMiAgMHWgIBFIICAwkWAgEXOgIAg1YCA00mAgM7HgICU9ICA0E+AgNCtgIBPzoCAIEOAgMHQgIBUSYCAT86AgNOugICAgICAgICAgICAgICAgICAgICAgICAgICUIICAlC+AgJSugICUIICAlFSAgJcjgIBXyICARc6AgCDBgIAgzoCARVeAgJT0gIBDwYCA0FSAgElPgIDOIICA0E+AgNDTgIAgT4CAziyAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAlCCAgJQvgICUroCAlCCAgJRUgIBUyICARSCAgE9MgIDEIICAQ8GAgNBUgIBJT4CAzoCAgJT0gICXooCAxEmAgNPBgIDQ0ICARcGAgFLTgICugICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgJQggICUL4CAlK6AgJQggICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICUIICAlC+AgJSugICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAlCyAgJQpgICUVICAlyOAgFTIgIBJ04CAIEmAgNMggIDBgICAlPKAgJcjgIDQwYCASc6AgFStgIBPzoCAIEOAgMHQgIBUSYCAT86AgK6AgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICULICAlCmAgJRSgICXooCAT86AgEUggIBDwYCA0FSAgElPgIDOIICAwkyAgE9DgIDLIICASdOAgJTygICXoYCA0MGAgEnOgIBURYCAxCCAgE/OgIAgVICAyEWAgCDTgIBDUoCARUWAgM4sgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgJQsgICUKYCAlFKAgJeigIBGUoCAT82AgCBMgIBFRoCAVCCAgFRPgIAgUoCASceAgMhUgIAsgICAlPKAgE/OgIBFIICAQ8iAgMFSgIDBQ4CAVEWAgFIggIDBVICAIMGAgCBUgIBJzYCARa6AgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgJQsgICUKYCAgICAgICAgICAgICAgICAgJQmgICUrYCAlHCAgM5PgIBXIICAVMiAgEUggIBST4CATEyAgK3VgIDQIICAzU+AgMRFgICugICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgJQmgICUrYCAlHCAgFTIgIBJ04CAIM2AgE/EgIBFIICASdOAgCDOgIBPUoCAzcGAgExMgIDZgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAlCaAgJStgICUcICA1dOAgEXEgIAgRoCAT1KAgCBMgIBJ1oCARSCAgFTWgIAg0ICAUk+AgMdSgIDBzYCA066AgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICUJoCAlK2AgJRwgIBDwYCA0FSAgElPgIDOIICATEmAgM5FgIDTIICAUk+AgExMgIAg1YCA0ICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAlCaAgJStgICUcICAT86AgEUggIBMSYCAzkWAgCDBgIBUIICAwSCAgFRJgIDNRYCAroCAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgJQsgICUIICAlFKAgJeigIBDYYCAcPSAgOnvgIBuc4CAIOOAgGFugIAgYYCAcHCAgOVhgIDygICAlPSAgJehgIDpboCAIOyAgO/3gIDl8oCAIOOAgGFzgIDlLICAlCCAgJQvgICUroCAlCCAgJTygICXooCAYW6AgGQggIBh7ICAc++AgCDpgIBuIICA03CAgGFugIDpc4CAaLqAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAlCCAgJQvgICUroCAlCCAgBNwgICXoYCAkbOAgMTfgIBuZICA5SCAgOVzgID0KoCAIOWAgOwggIBu6YCA/u+AgL+AgICUdoCAl6GAgEVzgID0KoCAIOWAgG4ggIDsYYCAIOOAgGFzgIBhroCAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICUIICAlC+AgJSugICUIICAlPSAgJehgIDBboCAZCCAgOlugIAgRoCA8uWAgG7jgIBouoCAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICUIICAlC+AgJSugICUIICAE3CAgNBhgIDy7ICA5XqAgK12gIDvdYCAcyCAgEbygIBhboCA+2GAgOlzgIC/gICAlPKAgJcjgIBS3ICAcNyAgPTlgIB6LICAIHOAgKfpgIDsIICAdu+AgHVzgIAgcICA7GGAgJE9gID0roCAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgJQggICUL4CAlK6AgJQggICRUoCAl6GAgFTIgIBFIICARk+AgExMgIBPV4CASc6AgMcggIDT0ICARUOAgEnBgIBMgICAkXCAgJehgIBDyICAwVKAgMFDgIBURYCAUtOAgCDBgIBSRYCAIMGAgEzTgIBPIICAwdaAgMFJgIBMwYCAwkyAgEWugICUUoCAl6KAgCoggIDcIICAXiCAgN8ggIDgIICAkTiAgCCAgICRuoCAIOmAgBOkgIAg74CAEyaAgCB1gICSvICAlPKAgJeigIBhgICAEzGAgCDlgICStoCAIOmAgJK5gIAg74CAE7OAgCB1gICSJYCAIICAgJE7gIAggICAkbyAgCCAgICRPYCAIICAgJE+gIAggICAkb+AgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICUIICAlC+AgJSugICUIICAkdCAgJehgIBUyICARdmAgCBJgIDOQ4CATNWAgMRFgIAgVICAyEWAgCDNgIDV04CASUOAgCDTgIDZzYCAwk+AgEyAgICRcICAlyOAgMHOgIDEIICAwUOAgENFgIDOVICARcSAgCBDgIDIwYCAUsGAgENUgIBFUoCA066AgJRUgID7IICAYYCAgBOhgIAg/oCAIO+AgBOogIAgYYCAE7mAgCCAgICRs4CAIKGAgJKngIAggICAkbWAgJT0gICRtoCAINmAgBO1gIAg44CAkquAgCCAgICRsICAIICAgJE0gIAggICAkTGAgCDCgIATNICAIICAgJE3gICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAlCCAgJQvgIA=</smpte:data>
+        </metadata>
+        <styling>
+            <style xml:id="basic" tts:color="white" tts:backgroundColor="black" tts:fontFamily="monospace" tts:fontSize="70%" tts:fontWeight="normal" tts:fontStyle="normal" textOutline="black 2px 4px"/>
+        </styling>
+        <layout>
+            <region xml:id="pop1" tts:backgroundColor="transparent" tts:showBackground="whenActive"/>
+            <region xml:id="pop2" tts:backgroundColor="transparent" tts:showBackground="whenActive"/>
+            <region xml:id="pop3" tts:backgroundColor="transparent" tts:showBackground="whenActive"/>
+            <region xml:id="pop4" tts:backgroundColor="transparent" tts:showBackground="whenActive"/>
+            <region xml:id="paint" tts:backgroundColor="transparent" tts:showBackground="whenActive"/>
+            <region xml:id="paint2" tts:backgroundColor="transparent" tts:showBackground="whenActive"/>
+            <region xml:id="paint3" tts:backgroundColor="transparent" tts:showBackground="whenActive"/>
+            <region xml:id="paint4" tts:backgroundColor="transparent" tts:showBackground="whenActive"/>
+            <region xml:id="rollup2" tts:backgroundColor="transparent" tts:showBackground="whenActive"/>
+            <region xml:id="rollup3" tts:backgroundColor="transparent" tts:showBackground="whenActive"/>
+            <region xml:id="rollup4" tts:backgroundColor="transparent" tts:showBackground="whenActive"/>
+        </layout>
+    </head>
+    <body>
+        <div>
+            <p begin="00:00:00:24" end="00:00:03:01" region="pop1" style="basic" tts:origin="40% 84.67%" tts:extent="17.5% 5.33%">♪MUSIC♪</p>
+            <p begin="00:00:04:11" end="00:00:06:12" region="pop1" style="basic" tts:origin="10% 79.33%" tts:extent="40% 5.33%">I AM AT THE LEFT</p>
+            <p begin="00:00:04:11" end="00:00:06:12" region="pop2" style="basic" tts:origin="10% 84.67%" tts:extent="35% 5.33%">OF THE SCREEN.</p>
+            <p begin="00:00:06:12" end="00:00:08:01" region="pop1" style="basic" tts:origin="10% 79.33%" tts:extent="27.5% 5.33%">SO CAPTIONS</p>
+            <p begin="00:00:06:12" end="00:00:08:01" region="pop2" style="basic" tts:origin="10% 84.67%" tts:extent="32.5% 5.33%">OF WHAT I SAY</p>
+            <p begin="00:00:08:01" end="00:00:10:23" region="pop1" style="basic" tts:origin="10% 79.33%" tts:extent="45% 5.33%">APPEAR AT THE LEFT</p>
+            <p begin="00:00:08:01" end="00:00:10:23" region="pop2" style="basic" tts:origin="10% 84.67%" tts:extent="47.5% 5.33%">OF THE SCREEN, TOO.</p>
+            <p begin="00:00:13:09" end="00:00:15:06" region="pop1" style="basic" tts:origin="55% 79.33%" tts:extent="35% 5.33%">NOW I'M AT THE</p>
+            <p begin="00:00:13:09" end="00:00:15:06" region="pop2" style="basic" tts:origin="40% 84.67%" tts:extent="50% 5.33%">RIGHT OF THE SCREEN,</p>
+            <p begin="00:00:15:06" end="00:00:17:28" region="pop1" style="basic" tts:origin="55% 79.33%" tts:extent="35% 5.33%">SO MY CAPTIONS</p>
+            <p begin="00:00:15:06" end="00:00:17:28" region="pop2" style="basic" tts:origin="40% 84.67%" tts:extent="50% 5.33%">APPEAR AT THE RIGHT.</p>
+            <p begin="00:00:18:29" end="00:00:20:02" region="pop1" style="basic" tts:origin="22.5% 84.67%" tts:extent="52.5% 5.33%"><span tts:fontStyle="italic"> NOW I AM OFF SCREEN.</span></p>
+            <p begin="00:00:20:02" end="00:00:21:12" region="pop1" style="basic" tts:origin="32.5% 79.33%" tts:extent="30% 5.33%"><span tts:fontStyle="italic"> TO INDICATE</span></p>
+            <p begin="00:00:20:02" end="00:00:21:12" region="pop2" style="basic" tts:origin="22.5% 84.67%" tts:extent="52.5% 5.33%"><span tts:fontStyle="italic"> THAT I'M OFF SCREEN,</span></p>
+            <p begin="00:00:21:12" end="00:00:23:22" region="pop1" style="basic" tts:origin="30% 79.33%" tts:extent="37.5% 5.33%"><span tts:fontStyle="italic"> WHATEVER I SAY</span></p>
+            <p begin="00:00:21:12" end="00:00:23:22" region="pop2" style="basic" tts:origin="30% 84.67%" tts:extent="37.5% 5.33%"><span tts:fontStyle="italic"> IS ITALICIZED.</span></p>
+            <p begin="00:00:24:17" end="00:00:27:00" region="pop1" style="basic" tts:origin="22.5% 10%" tts:extent="55% 5.33%">NOW MY NAME APPEARS AT</p>
+            <p begin="00:00:24:17" end="00:00:27:00" region="pop2" style="basic" tts:origin="17.5% 15.33%" tts:extent="62.5% 5.33%">THE BOTTOM OF THE SCREEN,</p>
+            <p begin="00:00:27:00" end="00:00:29:06" region="pop1" style="basic" tts:origin="27.5% 10%" tts:extent="45% 5.33%">WE PUT CAPTIONS OF</p>
+            <p begin="00:00:27:00" end="00:00:29:06" region="pop2" style="basic" tts:origin="22.5% 15.33%" tts:extent="55% 5.33%">WHAT I SAY AT THE TOP,</p>
+            <p begin="00:00:29:06" end="00:00:32:04" region="pop1" style="basic" tts:origin="27.5% 10%" tts:extent="45% 5.33%">SO THAT MY NAME IS</p>
+            <p begin="00:00:29:06" end="00:00:32:04" region="pop2" style="basic" tts:origin="20% 15.33%" tts:extent="60% 5.33%">NOT COVERED BY CAPTIONS.</p>
+            <p begin="00:00:32:04" end="00:00:33:04" region="pop1" style="basic" tts:origin="32.5% 84.67%" tts:extent="32.5% 5.33%">UP UNTIL NOW,</p>
+            <p begin="00:00:33:04" end="00:00:35:20" region="pop1" style="basic" tts:origin="27.5% 79.33%" tts:extent="45% 5.33%">WE HAVE BEEN USING</p>
+            <p begin="00:00:33:04" end="00:00:35:20" region="pop2" style="basic" tts:origin="30% 84.67%" tts:extent="40% 5.33%">POP-ON CAPTIONS.</p>
+            <p begin="00:00:35:20" end="00:00:37:12" region="pop1" style="basic" tts:origin="37.5% 79.33%" tts:extent="25% 5.33%">WHEN A NEW</p>
+            <p begin="00:00:35:20" end="00:00:37:12" region="pop2" style="basic" tts:origin="30% 84.67%" tts:extent="40% 5.33%">CAPTION POPS ON,</p>
+            <p begin="00:00:37:12" end="00:00:39:19" region="pop1" style="basic" tts:origin="30% 79.33%" tts:extent="37.5% 5.33%">THE OLD CAPTION</p>
+            <p begin="00:00:37:12" end="00:00:39:19" region="pop2" style="basic" tts:origin="35% 84.67%" tts:extent="27.5% 5.33%">DISAPPEARS.</p>
+            <p begin="00:00:40:27" end="00:00:42:26" region="paint" style="basic" tts:origin="37.5% 79.33%" tts:extent="22.5% 5.33%">THIS IS A</p>
+            <p begin="00:00:40:27" end="00:00:42:26" region="paint2" style="basic" tts:origin="27.5% 84.67%" tts:extent="42.5% 5.33%">PAINT-ON CAPTION.</p>
+            <p begin="00:00:42:26" end="00:00:44:28" region="paint" style="basic" tts:origin="25% 79.33%" tts:extent="50% 5.33%">ONE CAPTION BLOCK IS</p>
+            <p begin="00:00:42:26" end="00:00:44:28" region="paint2" style="basic" tts:origin="22.5% 84.67%" tts:extent="55% 5.33%">PAINTED ON THE SCREEN,</p>
+            <p begin="00:00:44:28" end="00:00:48:19" region="paint" style="basic" tts:origin="25% 79.33%" tts:extent="47.5% 5.33%">FROM LEFT TO RIGHT,</p>
+            <p begin="00:00:44:28" end="00:00:48:19" region="paint2" style="basic" tts:origin="20% 84.67%" tts:extent="60% 5.33%">ONE CHARACTER AT A TIME.</p>
+            <p begin="00:00:48:25" end="00:00:50:16" region="rollup3" style="basic" tts:origin="10% 84.67%" tts:extent="52.5% 5.33%">NOW THE ROLL-UP MODE.</p>
+            <p begin="00:00:50:16" end="00:00:51:18" region="rollup3" style="basic" tts:origin="10% 84.67%" tts:extent="52.5% 5.33%">THIS MODE IS NORMALLY</p>
+            <p begin="00:00:51:18" end="00:00:54:02" region="rollup3" style="basic" tts:origin="10% 84.67%" tts:extent="65% 5.33%">USED FOR LIVE TV PROGRAMS.</p>
+            <p begin="00:00:54:02" end="00:00:55:12" region="rollup3" style="basic" tts:origin="10% 84.67%" tts:extent="52.5% 5.33%">CAPTION LINES ROLL UP</p>
+            <p begin="00:00:55:12" end="00:00:57:01" region="rollup3" style="basic" tts:origin="10% 84.67%" tts:extent="47.5% 5.33%">ONE LINE AT A TIME.</p>
+            <p begin="00:00:57:25" end="00:00:59:17" region="pop1" style="basic" tts:origin="25% 79.33%" tts:extent="47.5% 5.33%">Captions can appear</p>
+            <p begin="00:00:57:25" end="00:00:59:17" region="pop2" style="basic" tts:origin="32.5% 84.67%" tts:extent="35% 5.33%">in lower case,</p>
+            <p begin="00:00:59:17" end="00:01:01:15" region="pop1" style="basic" tts:origin="25% 84.67%" tts:extent="50% 5.33%">and also in Spanish:</p>
+            <p begin="00:01:01:15" end="00:01:04:21" region="pop1" style="basic" tts:origin="12.5% 74%" tts:extent="50% 5.33%">¿Dónde está el niño?</p>
+            <p begin="00:01:01:15" end="00:01:04:21" region="pop2" style="basic" tts:origin="42.5% 84.67%" tts:extent="40% 5.33%">Está en la casa.</p>
+            <p begin="00:01:04:21" end="00:01:06:02" region="pop1" style="basic" tts:origin="32.5% 84.67%" tts:extent="35% 5.33%">And in French:</p>
+            <p begin="00:01:06:02" end="00:01:10:12" region="pop1" style="basic" tts:origin="10% 74%" tts:extent="52.5% 5.33%">Parlez-vous Français?</p>
+            <p begin="00:01:06:02" end="00:01:10:12" region="pop2" style="basic" tts:origin="27.5% 84.67%" tts:extent="62.5% 5.33%">Répétez, s'il vous plaît.</p>
+            <p begin="00:01:10:12" end="00:01:13:19" region="pop1" style="basic" tts:origin="22.5% 10%" tts:extent="52.5% 5.33%">THE FOLLOWING SPECIAL</p>
+            <p begin="00:01:10:12" end="00:01:13:19" region="pop2" style="basic" tts:origin="12.5% 15.33%" tts:extent="75% 5.33%">CHARACTERS ARE ALSO AVAILABLE.</p>
+            <p begin="00:01:10:12" end="00:01:13:19" region="pop3" style="basic" tts:origin="25% 79.33%" tts:extent="47.5% 5.33%">á é í ó ú à è ì ò ù</p>
+            <p begin="00:01:10:12" end="00:01:13:19" region="pop4" style="basic" tts:origin="25% 84.67%" tts:extent="47.5% 5.33%">ä ë ï ö ü â ê î ô û</p>
+            <p begin="00:01:13:19" end="00:01:17:23" region="pop1" style="basic" tts:origin="12.5% 10%" tts:extent="72.5% 5.33%">THEY INCLUDE THE MUSIC SYMBOL</p>
+            <p begin="00:01:13:19" end="00:01:17:23" region="pop2" style="basic" tts:origin="17.5% 15.33%" tts:extent="60% 5.33%">AND ACCENTED CHARACTERS.</p>
+            <p begin="00:01:13:19" end="00:01:17:23" region="pop3" style="basic" tts:origin="30% 79.33%" tts:extent="37.5% 5.33%">ç ã ñ õ å ¿ ¡ ¢</p>
+            <p begin="00:01:13:19" end="00:01:17:23" region="pop4" style="basic" tts:origin="30% 84.67%" tts:extent="37.5% 5.33%">£ ¥ © ® ™ ° ß ♪</p>
+        </div>
+    </body>
+</tt>
