@@ -1,3 +1,12 @@
+2014-05-27  Xavi Artigas  <xartigas@fluendo.com>
+
+	* src/gstttmlbase.c: (gst_ttmlbase_downstream_negotiation):
+	* testsuite/cpcdemo-0.10.bat:
+	* testsuite/cpcdemo-1.0.bat:
+	* testsuite/cpcdemo_smptett.xml:
+	Debug output and a new test file (plus the not-at-all-obvious pipeline
+	required to play it).
+
 2014-05-22  Xavi Artigas  <xartigas@fluendo.com>
 
 	* src/gstttmlattribute.c: (gst_ttml_attribute_normalize_length):
